--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -32,7 +32,7 @@ com.constant.weixin.templateId=koqM7lm5iF0akjjb_o01I98v4r-hu1laPau75_2i67E
 
 
 # 日志
-#logging.level.root=debug
+logging.level.root=debug
 
 
 # Redis数据库索引（默认为0）
