--- a/pom.xml
+++ b/pom.xml
@@ -171,6 +171,16 @@
             <version>1.9.4</version>
         </dependency>
 
+        <!--logback-->
+
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>jcl-over-slf4j</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
