--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.datasource.druid=com.alibaba.druid.pool.DruidDataSource
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/wechat?characterEncoding=utf8
 spring.datasource.username=root
-spring.datasource.password=wyue
+spring.datasource.password=root
 spring.datasource.tomcat.init-s-q-l=SET NAMES utf8mb4
 
 #Spring Data JPA
@@ -24,7 +24,12 @@ spring.jpa.hibernate.naming.physical-strategy=org.springframework.boot.orm.jpa.h
 #spring.datasource.druid.connection-init-sqls=["SET NAMES utf8mb4 COLLATE utf8mb4_unicode_ci"]
 
 
-#公众号配置
+#公众号配置 pro
+#com.constant.weixin.token=mytoken12345634
+#com.constant.weixin.appId=wx1599da12df15da65
+#com.constant.weixin.secret=f105e4cf2d789f1a415f6061ba0ecf6e
+#com.constant.weixin.templateId=koqM7lm5iF0akjjb_o01I98v4r-hu1laPau75_2i67E
+#公众号配置 dev
 com.constant.weixin.token=mytoken12345634
 com.constant.weixin.appId=wx1cd8080a2ddf9934
 com.constant.weixin.secret=75c117694be1c7a1592d53d558206522
@@ -32,7 +37,7 @@ com.constant.weixin.templateId=koqM7lm5iF0akjjb_o01I98v4r-hu1laPau75_2i67E
 
 
 # 日志
-logging.level.root=debug
+logging.config=classpath:logback.xml
 
 
 # Redis数据库索引（默认为0）
