--- a/pom.xml
+++ b/pom.xml
@@ -6,15 +6,10 @@
 
     <groupId>net.joywise</groupId>
     <artifactId>wechat-server</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0</version>
     <packaging>jar</packaging>
-    <name>wechat server</name>
-    <description>The server of wechat official accoun
-        ts.
-    </description>
-
-    <!-- FIXME change it to the project's website -->
-    <url>http://www.example.com</url>
+    <name>wechat-server</name>
+    <description>The server of wechat official accounts.</description>
 
 
     <parent>
@@ -28,6 +23,8 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>1.7</maven.compiler.source>
         <maven.compiler.target>1.7</maven.compiler.target>
+
+        <java.version>1.7</java.version>
     </properties>
 
 
@@ -181,9 +178,17 @@
             <groupId>org.slf4j</groupId>
             <artifactId>jcl-over-slf4j</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>org.flywaydb</groupId>
+            <artifactId>flyway-core</artifactId>
+            <version>4.0.3</version>
+        </dependency>
+
     </dependencies>
 
     <build>
+        <finalName>h5api</finalName>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
@@ -194,8 +199,11 @@
                 <artifactId>frontend-maven-plugin</artifactId>
                 <version>1.6</version>
             </plugin>
+            <plugin>
+                <groupId>org.flywaydb</groupId>
+                <artifactId>flyway-maven-plugin</artifactId>
+                <version>4.0.3</version>
+            </plugin>
         </plugins>
     </build>
-
-
 </project>
