--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,11 @@
-server.port=5099
-server.context-path=/smart-h5-api
+server.port=8199
+server.context-path=/h5api
 server.tomcat.uri-encoding=utf-8
 
 #MySQL
 spring.datasource.druid=com.alibaba.druid.pool.DruidDataSource
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/wechat?characterEncoding=utf8
+spring.datasource.url=jdbc:mysql://mysql:3306/wechat?characterEncoding=utf8
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.tomcat.init-s-q-l=SET NAMES utf8mb4
@@ -13,7 +13,7 @@ spring.datasource.tomcat.init-s-q-l=SET NAMES utf8mb4
 #Spring Data JPA
 spring.jpa.database=MYSQL
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=validate
 # Naming strategy
 spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
 # stripped before adding them to the entity DataManager)token
@@ -25,15 +25,16 @@ spring.jpa.hibernate.naming.physical-strategy=org.springframework.boot.orm.jpa.h
 
 
 #公众号配置 pro
-#com.constant.weixin.token=mytoken12345634
-#com.constant.weixin.appId=wx1599da12df15da65
-#com.constant.weixin.secret=f105e4cf2d789f1a415f6061ba0ecf6e
-#com.constant.weixin.templateId=koqM7lm5iF0akjjb_o01I98v4r-hu1laPau75_2i67E
-#公众号配置 dev
-com.constant.weixin.token=mytoken12345634
-com.constant.weixin.appId=wx1cd8080a2ddf9934
-com.constant.weixin.secret=75c117694be1c7a1592d53d558206522
+com.constant.weixin.token=joywise123123
+com.constant.weixin.appId=wx1599da12df15da65
+com.constant.weixin.secret=f105e4cf2d789f1a415f6061ba0ecf6e
 com.constant.weixin.templateId=koqM7lm5iF0akjjb_o01I98v4r-hu1laPau75_2i67E
+#公众号配置 dev
+#com.constant.weixin.token=mytoken12345634
+#com.constant.weixin.appId=wx1cd8080a2ddf9934
+#com.constant.weixin.secret=75c117694be1c7a1592d53d558206522
+##com.constant.weixin.templateId=koqM7lm5iF0akjjb_o01I98v4r-hu1laPau75_2i67E
+#com.constant.weixin.templateId=lPLi-fRH984lF5C_B860NOM_JDpsuPrIGxaDOEPVmwo
 
 
 # 日志
@@ -43,7 +44,7 @@ logging.config=classpath:logback.xml
 # Redis数据库索引（默认为0）
 spring.redis.database=0
 # Redis服务器地址
-spring.redis.host=127.0.0.1
+spring.redis.host=redis
 # Redis服务器连接端口
 spring.redis.port=6379
 # Redis服务器连接密码（默认为空）
@@ -58,3 +59,12 @@ spring.redis.pool.max-idle=10
 spring.redis.pool.min-idle=0
 # 连接超时时间（毫秒）
 spring.redis.timeout=1000
+
+flyway.baseline-version=1
+flyway.enabled=true
+flyway.clean-disabled=true
+flyway.ignore-missing-migrations=true
+flyway.locations=classpath:db/migration
+flyway.baselineOnMigrate=true
+flyway.sql-migration-prefix=V
+flyway.sql-migration-suffix=.sql
