--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -24,6 +24,8 @@ spring.jpa.hibernate.naming.physical-strategy=org.springframework.boot.orm.jpa.h
 #spring.datasource.druid.connection-init-sqls=["SET NAMES utf8mb4 COLLATE utf8mb4_unicode_ci"]
 
 
+com.constant.domain.cloud-base=http://qa1.dev.iedu.tech:8088/ROOT
+
 #公众号配置 pro
 com.constant.weixin.token=joywise123123
 com.constant.weixin.appId=wx1599da12df15da65
