--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -27,16 +27,16 @@ spring.jpa.hibernate.naming.physical-strategy=org.springframework.boot.orm.jpa.h
 com.constant.domain.cloud-base=http://qa1.dev.iedu.tech:8088/ROOT
 
 #公众号配置 pro
-com.constant.weixin.token=joywise123123
-com.constant.weixin.appId=wx1599da12df15da65
-com.constant.weixin.secret=f105e4cf2d789f1a415f6061ba0ecf6e
-com.constant.weixin.templateId=koqM7lm5iF0akjjb_o01I98v4r-hu1laPau75_2i67E
+#com.constant.weixin.token=joywise123123
+#com.constant.weixin.appId=wx1599da12df15da65
+#com.constant.weixin.secret=f105e4cf2d789f1a415f6061ba0ecf6e
+#com.constant.weixin.templateId=koqM7lm5iF0akjjb_o01I98v4r-hu1laPau75_2i67E
 #公众号配置 dev
-#com.constant.weixin.token=mytoken12345634
-#com.constant.weixin.appId=wx1cd8080a2ddf9934
-#com.constant.weixin.secret=75c117694be1c7a1592d53d558206522
-##com.constant.weixin.templateId=koqM7lm5iF0akjjb_o01I98v4r-hu1laPau75_2i67E
-#com.constant.weixin.templateId=lPLi-fRH984lF5C_B860NOM_JDpsuPrIGxaDOEPVmwo
+com.constant.weixin.token=mytoken12345634
+com.constant.weixin.appId=wx1cd8080a2ddf9934
+com.constant.weixin.secret=75c117694be1c7a1592d53d558206522
+#com.constant.weixin.templateId=koqM7lm5iF0akjjb_o01I98v4r-hu1laPau75_2i67E
+com.constant.weixin.templateId=lPLi-fRH984lF5C_B860NOM_JDpsuPrIGxaDOEPVmwo
 
 
 # 日志
