修订用户接口

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -2,6 +2,10 @@ server.port=8199
 server.context-path=/h5api
 server.tomcat.uri-encoding=utf-8
 
+#jsp
+spring.mvc.view.prefix=/jsp/
+spring.mvc.view.suffix=.jsp
+
 #MySQL
 spring.datasource.druid=com.alibaba.druid.pool.DruidDataSource
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
@@ -70,3 +74,5 @@ flyway.locations=classpath:db/migration
 flyway.baselineOnMigrate=true
 flyway.sql-migration-prefix=V
 flyway.sql-migration-suffix=.sql
+
+
