--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -3,8 +3,10 @@ server.context-path=/h5api
 server.tomcat.uri-encoding=utf-8
 
 #jsp
-spring.mvc.view.prefix=/jsp/
+spring.mvc.view.prefix=/public/
 spring.mvc.view.suffix=.jsp
+#spring.mvc.static-path-pattern=/static/
+#spring.resources.static-locations=classpath:/static,classpath:/public/static,classpath:/resources
 
 #MySQL
 spring.datasource.druid=com.alibaba.druid.pool.DruidDataSource
@@ -28,7 +30,7 @@ spring.jpa.hibernate.naming.physical-strategy=org.springframework.boot.orm.jpa.h
 #spring.datasource.druid.connection-init-sqls=["SET NAMES utf8mb4 COLLATE utf8mb4_unicode_ci"]
 
 
-com.constant.domain.cloud-base=http://qa1.dev.iedu.tech:8088/ROOT
+com.constant.domain.cloud-base=http://test.base.iedu.tech
 
 #公众号配置 pro
 #com.constant.weixin.token=joywise123123
